fixed spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -145,8 +145,8 @@ body {
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 0;
   font-weight: 400; }
 h1 { font-size: 2.2rem; line-height: 1.2;  letter-spacing: 0rem;}
 h2 { font-size: 2.0rem; line-height: 1.25; letter-spacing: 0rem; }
@@ -433,6 +433,8 @@ hr {
 img {
     max-width: 100%;
     vertical-align: middle;
+    margin-bottom: 1.5rem;
+    margin-top: 1rem;
 }
 
 /* blockquote */ 
